# greet-component

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt  main.cpp
